<resources>
    <string name="app_name">checareer</string>

    <string name="my_profile">나의 프로필</string>
    <string name="friend_profile">남의 프로필</string>

    <string name="skill_information">스킬 정보</string>

    <string name="next">다음</string>
    <string name="my_skill_top_three">나를 나타내는 스킬 태그 TOP3</string>
    <string name="please_insert_name">이름을 입력해주세요.</string>
    <string name="finish_your_profile">프로필 작성을 마루리 해보세요.</string>
    <string name="user_information">사용자 정보</string>
    <string name="please_select_skills">스킬을 선택해주세요.</string>
    <string name="settings_title">계정 설정</string>
    <string name="login">로그인</string>
    <string name="google_login">Google 계정으로 로그인</string>
    <string name="logout">로그아웃</string>
    <string name="delete_profle">프로필을 삭제하시겠어요?</string>
    <string name="add_profile">프로필 추가하기</string>
    <string name="complete">완료</string>
    <string name="save">저장하기</string>
    <string name="insert_sub_skill">세부 스킬 +</string>
    <string name="logout_confirm_message">계정에서 로그아웃하시겠습니까?</string>

    <string name="on_boarding_title">당신의 경험에 대해 알려주세요!</string>
    <string name="on_boarding_description">경험 기반의 커리어 기록을 통해,\n보다 다채롭게 스스로를 표현해보세요.</string>
    <string name="on_boarding_button">시작하기</string>
    <string name="on_boarding_login_button">이미 등록한 기록이 있으세요?</string>
    <string name="add_new_skill">새로운 스킬을 추가해주세요</string>
    <string name="add_sub_skill">%s의 세부 스킬을 추가해주세요</string>


    <string name="skill_level_1">아직은 찍먹중인</string>
    <string name="skill_level_2">부먹 중인,,</string>
    <string name="skill_level_3">그냥,, 먹방 찍는 몰라~</string>

    <string name="login_success">success</string>
    <string name="login_failure">failure</string>

    <string name="home_empty_view_title">아직 완성된 프로필이 없어요.</string>
    <string name="home_empty_view_description">나만의 스킬 프로필을 만들어보세요.</string>
    <string name="home_empty_view_button_text">만들러가기</string>

</resources>