<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.nexters.checkareer.presentation.ui.onboarding.OnBoardingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".presentation.ui.onboarding.OnBoardingActivity">


        <ImageView
            android:layout_margin="32dp"
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:fitsSystemWindows="true"
            android:background="@drawable/ic_onboarding_text"
            android:src="@drawable/ic_onboarding_shadow"
            app:layout_constraintBottom_toTopOf="@+id/half"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/half"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/on_boarding_title"
            style="@style/BoldText"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/margin_32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/half" />

        <TextView
            android:id="@+id/textview_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/on_boarding_description"
            style="@style/RegularText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textview_title"
            app:layout_constraintStart_toStartOf="@+id/textview_title"
            app:layout_constraintTop_toBottomOf="@id/textview_title" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/start_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="@color/point_color_1"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textview_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textview_create_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_boarding_button"
                    style="@style/OnBoardingButtonText"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.nexters.checkareer.presentation.widget.LoadingView
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>